--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://springboot-dbs.csmjwqyuyier.ap-northeast-2.rds.amazonaws.com\:3306/springboot
+spring.datasource.username=admin
+spring.datasource.password=asdfjkl1
+spring.jpa.hibernate.ddl-auto=update
